css/style.css
/* ... */
.address-grid {
    padding: 1em 0;
}
.address1 h3{
	font-size: 1.2em;
	color:#000;
	line-height:1.4em;
    font-family: 'Ubuntu-Regular';
}
.address1 p{
	margin: 0;
}
.address1 p a{
	text-decoration:none;
	color: #7c7c7c;
}
.address1 p a:hover{
	color:#F67777;
}
.address-more h4{
	color:#000;
	font-size:2em;
	margin: 0 15px 0.7em;
}
.address {
	padding-top: 0em;
	padding-right: 0;
	padding-left: 0;
	padding-bottom: 0;
}
/*--404--*/
.four{
	padding:5em 0;
	text-align:center;
}
.four h3{
	font-size: 7em;
    color: #F67777;
    font-family: 'Ubuntu-Regular';
}
.four p{
	font-size: 0.9em;
    color: #B3B3B3;
    line-height: 1.8em;
    margin: 0 0 1.5em;
}
/*--checkout--*/
.check-out{
	padding:5em 0em 0;
}
table{
	width:100%;
	  margin: 0em 0 2em;
}
th{
	color: #000000;
    font-size: 1.4em;
    font-weight: 400;
    font-family: 'Ubuntu-Regular';
}
th, td {
    padding: 10px;
}
td{
	color:#b2b2b2;
  font-size: 1em;
}
a.at-in {
  float: left;
    width: 20%;
}
.sed {
    float: right;
	width: 74%;
}
.sed h5{
  	font-size: 1.1em;
	font-family: 'Ubuntu-Regular';
}
.sed h5 a{
    color: #F67777;
  	text-decoration:none;
}
.sed h5 a:hover{
    color: #000;
}
.sed p{
    color:#b2b2b2;
	font-size:0.8em;
	line-height:1.8em;
	padding:1em 0 0;
}
.table-responsive {
    border: none;
}
.ring-in{
	width:45%;
}

.ring-in{
  position: relative;
}
.close1, .close2, .close3 {
  background: url('../images/close.png') no-repeat 0px 0px ;
  cursor: pointer;
  width: 28px;
  height: 28px;
  position: absolute;
  right: 5px;
  bottom: 10px;
  -webkit-transition: color 0.2s ease-in-out;
  -moz-transition: color 0.2s ease-in-out;
  -o-transition: color 0.2s ease-in-out;
  transition: color 0.2s ease-in-out;
}
/*--//checkout--*/
/*--footer--*/
.footer-middle{
	background:#1F1F1F;
	padding:4em 0;
}
.footer-middle-in h6{
	font-size: 1.4em;
    color: #fff;
    font-family: 'Ubuntu-Bold';
	margin-bottom: 1em;
    text-transform: uppercase;
}
.footer-middle-in  p{
    font-size: 0.9em;
    color: #B3B3B3;
    line-height: 1.8em;
    margin-top: 1em;	
}
.footer-middle-in  span{
    font-size: 0.9em;
    color: #B3B3B3;
    line-height: 1.8em;	
}
.in{
	float: left;
	padding-right: 65px;
}
.in1{
	float:right;
}
ul.in li{
	list-style:none;
}
ul.in li a{
	color:#B3B3B3;
	font-size:0.9em;
	text-decoration:none;
	padding:0 0 0.5em ;
	display:block;	 
}
ul.in li a:hover{
	color:#F67777;
}
ul.tag-in li{
	display:inline-block;
}
ul.tag-in li a{
	color:#B3B3B3;
	font-size: 0.9em;
    text-decoration: none;
    padding: 0.3em 0.7em;
    border: 1px solid #B3B3B3;
    display: block;
    margin-bottom: 0.6em;
    border-radius: 15px;	
}
ul.tag-in li a:hover{
	color:#F67777;
    border: 1px solid #F67777;	
}
.footer-class a:hover{
	color:#fff;
}
.footer-middle-in input[type="text"] {
    width: 100%;
    padding: 0.5em 1em;
    margin: 0.7em 0;
    background: none;
    outline: none;
    border: 1px solid #B3B3B3;
    -webkit-appearance: none;
    font-size: 0.9em;
    color: #B3B3B3;
}
.footer-middle-in input[type="submit"] {
    width: 100%;
    font-size: 1em;
    background: #F67777;
    padding: 0.5em 1em;
    text-align: center;
    color: #fff;
    border: none;
    outline: none;
    -webkit-appearance: none;
	transition: 0.5s all;
	-webkit-transition: 0.5s all;
	-o-transition: 0.5s all;
	-moz-transition: 0.5s all;
	-ms-transition: 0.5s all;
}
.footer-middle-in input[type="submit"]:hover {
   color: #F67777;
    background: #fff;
}
.footer-bottom{
	background:#000;
	padding:3em 0;	 
}
.footer-class{
	color:#fff;
	font-size:1em;
	float:right;
}
.footer-class a{
	color:#F67777;
	text-decoration:none;
}
.footer-bottom-top{
	float:left;
}
.footer-bottom-top li{
	display:inline-block;
}
/*--//footer--*/
/*--typo--*/
.page-header h3{
	font-size: 3em;
	color:#000;
	font-family: 'Ubuntu-Regular';
}
.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
  padding: 8px;
  line-height: 1.42857143;
  vertical-align: top;
  border-top: none;
}
.grid1 {
  margin: 1.5em 0 0;
}
ul.nav.nav-pills {
  margin: 1.5em 0 0;
}
.grid2{
	margin: 1em 0 0;
}
.page {
  padding: 4em 0 4em;
}
.bs-example {
  padding: 2em 0 0;
}
.form-horizontal .control-label {
  text-align: left;
}
/*--//typo--*/
/*--responsive--*/
@media(max-width:1366px){
}
@media(max-width:1280px){
.navbar-nav > li > .mega-dropdown-menu {
    left: -130%;
}
}
@media(max-width:1220px){
.h_menu4 {
    margin-left: 16.6%;
}
ul.nav_1 li a {
    padding: 1.6em 1.2em;
}
.col1 ul li a {
    padding: 6px 0px;
}
.navbar-nav > li > .dropdown-menu {
    left: -197%;
}
.navbar-nav > li > .mega-dropdown-menu {
    left: -387%;
}
.banner {
	height: 467px;
}
.col-pic {
    padding-top: 5em;
}
.mid-1 h6 {
    font-size: 1.05em;
}
.mid-2 p {
    font-size: 0.75em;
}
.b-wrapper1.long-img {
    padding-top: 14em;
}
.heart li a {
    margin: 0 0.5em;
}
}
@media(max-width:1000px){
.navbar-toggle {
	background-color: transparent !important;
}
.navbar-toggle .icon-bar {
	background-color: transparent;
}
.header-login {
    margin-left: 24%;
    width: 33%;
	float:left;
}
ul.nav_1 li a {
    padding: 1.2em 0.5em;
    font-size: 0.8em;
}
.col1 ul li a {
    padding: 6px 0px;
	font-size: 0.85em;
}
.logo img{
	width:84%;
}
.h_menu4 {
    margin-left: 21.8%;
    width: 56%;
    padding: 0;
	float:left;
}
.search-right {
	width: 22%;
	float: left;
}
.heart span {
    margin: 0.6em;
}
.right button {
    left: 43px;
}
.box_1 h3 {
	font-size: 0.8em;
	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
	font-weight: bold;
}
.box_1 p a {
    font-size: 0.7em;
}
.box_1 h3 img {
    width: 25%;
}
.cart.box_1 {
    margin-top: 0px;
}
.heart {
    margin-top: 0em;
}
}
/* ... */

